--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,8 @@
+hr{
+    border-color: #ee6e73;
+    border-top: none;
+}
+
 .brand-logo img{
     width: 100px;
 }
@@ -5,8 +10,8 @@
     position: static;
     margin-bottom: 20px;
 }
-.search button[type='submit']{
-    
+#nav-mobile li.search input:focus{
+    box-shadow: none;
 }
 .side-nav li{
     padding: 0;
