--- a/css/main.css
+++ b/css/main.css
@@ -53,7 +53,9 @@ ul.side-nav.fixed li.active{
     color: rgba(255,255,255,.9);
 }
 
-
+.side-widgets{
+    margin-bottom: 20px;
+}
 /* calendar */
 .calendartop td,
 .calendar td{
@@ -66,6 +68,17 @@ footer.page-footer{
 
 footer.page-footer .links{
     padding-top: 20px;
+}
+
+@media only screen and (min-width: 601px){
+    .row .side-widgets {
+        margin-right: 20px;
+    }
+}
+@media only screen and (min-width: 993px){
+    .row .side-widgets {
+        margin-right: 0px;
+    }
 }
 
 
