--- a/css/main.css
+++ b/css/main.css
@@ -105,6 +105,39 @@ footer.page-footer .links{
     background: transparent;
 }
 
+pre[class*=lang-]{
+    max-height: 320px;
+    padding: 1em;
+    margin: .5em 0;
+    overflow: auto;
+    border-radius: 0.3em;
+    background: #272822;
+    color: #f8f8f2;
+    text-shadow: 0 1px rgba(0, 0, 0, 0.3);
+    font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+    direction: ltr;
+    text-align: left;
+    white-space: pre;
+    word-spacing: normal;
+    word-break: normal;
+    word-wrap: normal;
+    line-height: 1.5;
+    -moz-tab-size: 4;
+    -o-tab-size: 4;
+    tab-size: 4;
+    -webkit-hyphens: none;
+    -moz-hyphens: none;
+    -ms-hyphens: none;
+    hyphens: none;
+}
+
+#content h1{font-size: 22px;}
+#content h2{font-size: 20px;}
+#content h3{font-size: 18px;}
+#content h4{font-size: 16px;}
+#content h5{font-size: 14px;}
+#content h6{font-size: 12px;}
+
 /* Padding helpers */
 .padding {
     padding: 1.6rem;
