--- a/css/main.css
+++ b/css/main.css
@@ -174,6 +174,21 @@ pre[class*=lang-]{
     color: #fff;
 }
 
+.tag-badge{
+    font-weight: 300;
+    font-size: 0.8rem;
+    color: #fff;
+    background-color: #26a69a;
+    border-radius: 2px;
+    min-width: 3rem;
+    padding: 0 6px;
+    text-align: center;
+    font-size: 1rem;
+    line-height: inherit;
+    box-sizing: border-box;
+    margin-right: 10px;
+}
+
 #content h1{font-size: 24px;}
 #content h2{font-size: 20px;}
 #content h3{font-size: 18px;}
