修复图标在移动端、Safari不显示问题

--- a/css/icon.css
+++ b/css/icon.css
@@ -2,7 +2,12 @@
   font-family: 'Material Icons';
   font-style: normal;
   font-weight: 400;
-  src: local('Material Icons'), local('MaterialIcons-Regular'), url(../font/materialicons.woff2) format('woff2');
+  src: url(../font/material-design-icons/MaterialIcons-Regular.eot); /* For IE6-8 */
+  src: local('Material Icons'),
+      local('MaterialIcons-Regular'),
+      url(../font/material-design-icons/MaterialIcons-Regular.woff2) format('woff2'),
+      url(../font/material-design-icons/MaterialIcons-Regular.woff) format('woff'),
+      url(../font/material-design-icons/MaterialIcons-Regular.ttf) format('truetype');
 }
 
 .material-icons {
@@ -17,6 +22,13 @@
   white-space: nowrap;
   word-wrap: normal;
   direction: ltr;
+
+  /* Support for IE. */
   -webkit-font-feature-settings: 'liga';
+  /* Support for all WebKit browsers. */
   -webkit-font-smoothing: antialiased;
+  /* Support for Firefox. */
+  -moz-osx-font-smoothing: grayscale;
+  /* Support for Safari and Chrome. */
+  text-rendering: optimizeLegibility;
 }
